--- a/package.json
+++ b/package.json
@@ -6,5 +6,21 @@
   "repository": "https://github.com/tvercamer/exploring-react-email",
   "author": "Thomas Vercamer",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "dependencies": {
+    "@react-email/button": "0.0.6",
+    "@react-email/column": "0.0.6",
+    "@react-email/container": "0.0.7",
+    "@react-email/head": "0.0.4",
+    "@react-email/heading": "0.0.7",
+    "@react-email/html": "0.0.4",
+    "@react-email/img": "0.0.4",
+    "@react-email/preview": "0.0.5",
+    "@react-email/section": "0.0.8",
+    "@react-email/text": "0.0.4",
+    "react-email": "1.7.13"
+  },
+  "scripts": {
+    "dev": "email dev"
+  }
 }
